[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain_interpreter"
version = "0.0.3"
authors = [
  { name="Elijah Tarr", email="elijahotarr@gmail.com" },
]
description = "A way to turn json into langchain pipelines."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/eoriont/langchain_interpreter"
"Bug Tracker" = "https://github.com/eoriont/langchain_interpreter/issues"
